--- a/06_DOM/index.html
+++ b/06_DOM/index.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #ffff
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1>DOM learning on Chai aur code</h1>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM learning on Chai aur code
+            <span style="display: none;">test text</span>
+        </h1>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem, ipsum dolor.</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, labore!</p>
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="List-item">one</li>
+            <li class="List-item">two</li>
+            <li class="List-item">three</li>
+            <li class="List-item">four</li>
+        </ul>
     </div>
 </body>
 </html>
