--- a/09_advance_one/ApiRequest.html
+++ b/09_advance_one/ApiRequest.html
@@ -19,11 +19,11 @@
     xhr.onreadystatechange = function(){
         console.log(xhr.readyState);
         if(xhr.readyState === 4){
-            console.log((responseText));
-            
+            const data = JSON.parse(this.responseText);
+            console.log(typeof data);
+            console.log(data.followers);
         }
     }
-    
     xhr.send()
 </script>
 </html>
